--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <title>GPXmagic</title>
+  <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
   <script type="text/javascript" src="Main.js"></script>
-  <script src='https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.js'></script>
-  <link href='https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.css' rel='stylesheet' />
+  <script src="https://api.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.js"></script>
+  <link href="https://api.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.css" rel="stylesheet">
 </head>
 
 <body>
@@ -102,7 +103,7 @@ function startDraggingPoint(e) {
 function onMove(e) {
     var coords = e.lngLat;
 
-    //    console.log(e);
+    console.log(e);
 
     // Set a UI indicator for dragging.
     canvas.style.cursor = 'grabbing';
@@ -154,18 +155,6 @@ function incomingMessageHandler(msg) {
             }
             break;
 
-        case 'Stop':
-            if (isMapCreated) {
-                console.log('removing the map');
-                map.remove();
-                map = null;
-                isMapCreated = false;
-                trackAdded = false;
-                pointsLayerAdded = false;
-                app.ports.mapStopped.send('stopped');
-            }
-            break;
-
         case 'Mark':
             if (isMapCreated) {
                 console.log('adding marker');
@@ -210,26 +199,6 @@ function makeTheMap(msg) {
                 // Add zoom and rotation controls to the map.
                 map.addControl(new mapboxgl.NavigationControl());
                 app.ports.messageReceiver.send({ 'msg' : 'map ready' });
-        });
-
-        map.on('move', function (event) {
-                app.ports.messageReceiver.send
-                    ( { 'msg' : 'move'
-                      , 'lat' : map.getCenter().lat
-                      , 'lon' : map.getCenter().lng
-                      , 'zoom' : map.getZoom()
-                  } );
-        });
-
-        map.on('click', function(e) {
-            // The event object (e) contains information like the
-            // coordinates of the point on the map that was clicked.
-            // console.log('A click event has occurred at ' + e.lngLat);
-                app.ports.messageReceiver.send(
-                 { 'msg' : 'click'
-                 , 'lat' : e.lngLat.lat
-                 , 'lon' : e.lngLat.lng
-                 } );
         });
 
     } else {
