Forcibly refresh map every timer tick. Ye gods, but it works.

--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@ function onUp(e) {
 };
 
 function incomingMessageHandler(msg) {
-    console.log('behold, a message from the land of Elm');
-    console.log(msg);
+//    console.log('behold, a message from the land of Elm');
+//    console.log(msg);
 
     switch (msg.Cmd) {
         case 'Init':
