Problem derivation looks OK in debug.

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ function onUp(e) {
 
 function incomingMessageHandler(msg) {
 //    console.log('behold, a message from the land of Elm');
-    console.log(msg);
+//    console.log(msg);
 
     switch (msg.Cmd) {
         case 'Init':
