--- a/site/index.html
+++ b/site/index.html
@@ -6,8 +6,6 @@
   <title>GPXmagic</title>
   <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
   <script type="text/javascript" src="main.js"></script>
-  <script type='text/javascript' src='js/PortFunnel.js'></script>
-  <script type='text/javascript' src='js/PortFunnel/LocalStorage.js'></script>
   <script src='https://api.mapbox.com/mapbox-gl-js/v2.4.1/mapbox-gl.js'></script>
   <link href='https://api.mapbox.com/mapbox-gl-js/v2.4.1/mapbox-gl.css' rel='stylesheet' />
   <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-draw/v1.2.2/mapbox-gl-draw.js"></script>
@@ -43,9 +41,8 @@ app.ports.genRandomBytes.subscribe(n => {
     app.ports.randomBytes.send(bytes);
 });
 
-// Mapbox integration ... possibly focked by PortFunnel.
-app.ports.mapPort.subscribe(incomingMessageHandler);
-app.ports.storagePort.subscribe(storagePortDispatcher);
+// Was Mapbox integration, now more a general port for commands from Elm.
+app.ports.commandPort.subscribe(incomingMessageHandler);
 
 // We use port messages to synchronise our state here with Elm.
 var map;
@@ -166,8 +163,6 @@ function incomingMessageHandler(msg) {
             if (isMapCreated) {
                 addLineToMap(msg.data, msg.points);
                 setClickMode('true', msg.points);
-//                map.setCenter([msg.lon, msg.lat]);
-//                map.setZoom(msg.zoom)
             }
             break;
 
@@ -219,6 +214,34 @@ function incomingMessageHandler(msg) {
 
         case 'ExitSketch':
             sketchDataCapture();
+            break;
+
+        case 'storage.put':
+            localStorage.setItem(msg.key, msg.value);
+            break;
+
+        case 'storage.get':
+            var val = null;
+            try {
+              val = JSON.parse(localStorage.getItem(msg.key))
+            } catch (e) {
+            }
+            app.ports.messageReceiver.send({ 'msg' : 'got', 'key' : msg.key, 'val' : val });
+            break;
+
+        case 'storage.list':
+            var keys = [];
+            var cnt = localStorage.length;
+                for (var i = 0; i < cnt; i++) {
+                    var key = storage.key(i);
+                    keys.push(key);
+                }
+            }
+            app.ports.messageReceiver.send({ 'msg' : 'got', 'keys' : keys });
+            break;
+
+        case 'storage.clear':
+            localStorage.clear();
             break;
     }
 };
