Seems stable now with Chart back.

--- a/site/index.html
+++ b/site/index.html
@@ -415,13 +415,13 @@ function addOptionals(msg) {
             .addTo(map);
     };
 
-    if (typeof(msg.white) === 'undefined') {
-        whiteMarker.remove();
-    } else {
-        whiteMarker
-            .setLngLat([msg.white.lon, msg.white.lat])
-            .addTo(map);
-    };
+//    if (typeof(msg.white) === 'undefined') {
+//        whiteMarker.remove();
+//    } else {
+//        whiteMarker
+//            .setLngLat([msg.white.lon, msg.white.lat])
+//            .addTo(map);
+//    };
 
 //    console.log(msg.previews);
 //    if (msg.previews != 'undefined' && typeof(msg.previews) != 'undefined') {
