--- a/site/index.html
+++ b/site/index.html
@@ -7,6 +7,7 @@
   <script type="text/javascript" src="main.js"></script>
   <script type="text/javascript" src="js/elm-mapbox.umd.js"></script>
   <script type="text/javascript" src="js/PolyFill.js"></script>
+  <link href="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.css" rel="stylesheet">
 </head>
 
 <body>
