--- a/site/index.html
+++ b/site/index.html
@@ -441,29 +441,29 @@ function addPreview(preview) {
         'data': preview.points
         });
 
-//    map.addLayer({
-//        'id': preview.name,
-//        'type': 'line',
-//        'source': preview.name,
-//        'layout': {
-//        'line-join': 'round',
-//        'line-cap': 'round'
-//        },
-//        'paint': {
-//            'line-color': preview.colour,
-//            'line-width': 4
-//        }
-//    });//
-
     map.addLayer({
         'id': preview.name,
-        'type': 'circle',
+        'type': 'line',
         'source': preview.name,
+        'layout': {
+        'line-join': 'round',
+        'line-cap': 'round'
+        },
         'paint': {
-            'circle-radius': 12,
-            'circle-color': preview.colour
+            'line-color': preview.colour,
+            'line-width': 4
         }
     });
+
+//    map.addLayer({
+//        'id': preview.name,
+//        'type': 'circle',
+//        'source': preview.name,
+//        'paint': {
+//            'circle-radius': 12,
+//            'circle-color': preview.colour
+//        }
+//    });
 
 
 };
